--- a/_scss/home.scss
+++ b/_scss/home.scss
@@ -5,291 +5,18 @@
   padding-bottom: rem(20px);
   transition: all 1s ease;
   .home-intro-text {
-    font-family: $serif-font-stack;
-    font-weight: 600;
-    line-height: 1.4;
-    position: relative;
-    z-index: 2;
-    &.home-intro-text__small-mobile {
-      display: none;
-      font-size: rem(16px);
-        .reveal-line {
-          height: 28px;
-          .reveal-text {
-            top: 2px;
-          }
-        }
-    }
-    &.home-intro-text__large-mobile {
-      display: block;
-      font-size: rem(18px);
-      .reveal-line {
-        height: 32px;
-        .reveal-text {
-          top: 2px;
-        }
-      }
-    }
-    &.home-intro-text__small-tablet {
-      display: none;
-      font-size: rem(24px);
-      .reveal-line {
-        height: 38px;
-        .reveal-text {
-          top: 0;
-        }
-      }
-    }
-    &.home-intro-text__large-tablet {
-      display: none;
-      font-size: rem(32px);
-      .reveal-line {
-        height: 48px;
-      }
-    }
-    &.home-intro-text__small-desktop {
-      display: none;
-      font-size: 28px;
-      .reveal-line {
-        height: 44px;
-      }
-      @media (min-width: 1000px) and (max-width: 1239px) {
-        font-size: 36px;
-        .reveal-line {
-          height: 52px;
-        }
-      }
-    }
-    &.home-intro-text__large-desktop {
-      display: none;
-      font-size: rem(48px);
-      .reveal-line {
-        height: 64px;
-      }
-    }
-    // small mobile
-    @media (max-width: 380px) {
-      &.home-intro-text__small-mobile {
-        display: block;
-      }
-      &.home-intro-text__large-mobile {
-        display: none;
-      }
-      &.home-intro-text__small-tablet {
-        display: none;
-      }
-      &.home-intro-text__large-tablet {
-        display: none;
-      }
-      &.home-intro-text__small-desktop {
-        display: none;
-      }
-      &.home-intro-text__large-desktop {
-        display: none;
-      }
-    }
-    // small tablet
-    @media (min-width: 500px) {
-      &.home-intro-text__small-mobile {
-        display: none;
-      }
-      &.home-intro-text__large-mobile {
-        display: none;
-      }
-      &.home-intro-text__small-tablet {
-        display: block;
-      }
-      &.home-intro-text__large-tablet {
-        display: none;
-      }
-      &.home-intro-text__small-desktop {
-        display: none;
-      }
-      &.home-intro-text__large-desktop {
-        display: none;
-      }
-    }
-    // large tablet
-    @media (min-width: 680px) {
-      &.home-intro-text__small-mobile {
-        display: none;
-      }
-      &.home-intro-text__large-mobile {
-        display: none;
-      }
-      &.home-intro-text__small-tablet {
-        display: none;
-      }
-      &.home-intro-text__large-tablet {
-        display: block;
-      }
-      &.home-intro-text__small-desktop {
-        display: none;
-      }
-      &.home-intro-text__large-desktop {
-        display: none;
-      }
-    }
-    // small desktop
-    @media (min-width: 769px) {
-      &.home-intro-text__small-mobile {
-        display: none;
-      }
-      &.home-intro-text__large-mobile {
-        display: none;
-      }
-      &.home-intro-text__small-tablet {
-        display: none;
-      }
-      &.home-intro-text__large-tablet {
-        display: none;
-      }
-      &.home-intro-text__small-desktop {
-        display: block;
-      }
-      &.home-intro-text__large-desktop {
-        display: none;
-      }
-    }
-    // large desktop
-    @media (min-width: 1240px) {
-      &.home-intro-text__small-mobile {
-        display: none;
-      }
-      &.home-intro-text__large-mobile {
-        display: none;
-      }
-      &.home-intro-text__small-tablet {
-        display: none;
-      }
-      &.home-intro-text__large-tablet {
-        display: none;
-      }
-      &.home-intro-text__small-desktop {
-        display: none;
-      }
-      &.home-intro-text__large-desktop {
-        display: block;
-      }
-    }
-    .reveal-line {
-      display: block;
-      position: relative;
-      overflow: hidden;
-      margin: 0;
-      &.loaded {
-        overflow: visible;
-      }
-      .reveal-text {
-        position: absolute;
-        top: -4px;
-        z-index: 200;
-        visibility: hidden;
-      }
-    }
-    .home-intro-link__mobile {
-      font-style: italic;
-      color: $blue;
-      transition: all 0.2s ease;
+    font-family: $display-font-stack;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.6;
+    @include simple-fade-in;
+    .home-intro-link {
+      color: $greendark;
+      border-bottom: 4px solid $greendark;
       &:hover {
-        color: $darkblue;
-        background: $aqua;
-        text-decoration: none;
-      }
-    }
-    .home-intro-link__desktop {
-      margin-right: -4px;
-      font-style: italic;
-      color: $blue;
-      &:hover {
-        color: $blue;
-        background: transparent;
-        text-decoration: none;
-      }
-      &.mouseover {
-        .char {
-          &.medium-less-40::after {
-            width: 20px;
-            height: 45px;
-            background: $lightnavy;
-          }
-          &.medium-bn-40-100::after {
-            width: 18px;
-            height: 40px;
-            background: $lightblue;
-          }
-          &.medium-bn-100-150::after {
-            width: 16px;
-            height: 35px;
-            background: $lightgreen;
-          }
-          &.medium-bn-150-200::after {
-            width: 14px;
-            height: 30px;
-            background: $lightyellow;
-          }
-          &.medium-more-200::after {
-            width: 12px;
-            height: 25px;
-            background: $lightpeach;
-          }
-          @media (min-width: 1200px) {
-            &.medium-less-40::after {
-              width: 26px;
-              height: 70px;
-              background: $lightnavy;
-            }
-            &.medium-bn-40-100::after {
-              width: 24px;
-              height: 65px;
-              background: $lightblue;
-            }
-            &.medium-bn-100-150::after {
-              width: 22px;
-              height: 60px;
-              background: $lightgreen;
-            }
-            &.medium-bn-150-200::after {
-              width: 20px;
-              height: 55px;
-              background: $lightyellow;
-            }
-            &.medium-more-200::after {
-              width: 18px;
-              height: 50px;
-              background: $lightpeach;
-            }
-          }
-        }
-      }
-      span {
-        position: relative;
-        &.word {
-          white-space: nowrap;
-        }
-        &.char {
-          &::after {
-            content: '';
-            position: absolute;
-            z-index: -1;
-            top: 60%;
-            left: 50%;
-            transform: translate(-50%,-50%) rotate(45deg);
-            display: inline;
-            width: 0;
-            height: 0;
-            background: transparent;
-            border-radius: 500px;
-            transition: height 0.25s ease;
-          }
-        }
+        color: $browndark;
+        border-bottom: 4px solid $browndark;
       }
     }
   }
-}
-
-.external-link-icon {
-  position: relative;
-  bottom: 2px;
-  font-size: 14px;
 }
