--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
     <link href="/assets/css/hiit.css" rel="stylesheet">
   {% else %}
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,300;0,600;0,900;1,300;1,600;1,900&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=block" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=block" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" rel=stylesheet type="text/css">
     <link href="/assets/css/normalize.min.css" rel="stylesheet">
     <link href="/assets/css/main.css" rel="stylesheet">
