--- a/_layouts/rrbc.html
+++ b/_layouts/rrbc.html
@@ -2,9 +2,7 @@
 <html lang="en">
   {% include head.html %}
   <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy">Uh-oh! Looks like you’re using an <strong>outdated</strong> browser. You should definitely <a href="https://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
-    <![endif]-->
+    {% include browse-happy.html %}
 
     <main class="wrapper">
       <div id="rotating-item-wrapper">
