--- a/_scss/footer.scss
+++ b/_scss/footer.scss
@@ -5,7 +5,7 @@ footer {
   left: 200px;
   bottom: 30px;
   width: calc(100% - 200px);
-  background-color: $white;
+  background-color: $graylight;
   @include media(medium) {
     display: none;
   }
@@ -24,6 +24,6 @@ footer {
   background-repeat: no-repeat;
   background-size: cover;
   @include media(medium) {
-    height: 4px;
+    display: none;
   }
 }
