--- a/_scss/nav.scss
+++ b/_scss/nav.scss
@@ -7,63 +7,44 @@
   width: 150px;
   margin: 0;
   padding: 0;
-  background: $white;
+  background: $graylight;
   @include media(medium) {
     display: none;
   }
 }
 
-.name,
 .desktop-menu {
-  margin-left: 1rem;
+  margin-left: rem(20px);
 }
 
-.mobile-menu-link {
-  float: right;
-  display: none;
-  width: 40px;
-  @include media(medium) {
-    display: block;
-  }
-  .bar {
-    display: block;
-    width: 40px;
-    height: 4px;
-    margin-bottom: 4px;
-    background: $blue;
-  }
-  &.active,
-  &:hover,
-  &:active {
-    background: $white;
-    .bar {
-      background: $lightblue;
-    }
-  }
-}
-
-.name {
+.name-wrapper {
   display: flex;
   align-items: center;
-  height: 60px;
   margin: 0;
-  background: $darkblue;
-  .nav-link {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    margin: 0;    
-    padding-left: 1rem;    
-    font-size: 1rem;
-    font-weight: 600;
-    color: $white;
-    transition: color 0.2s ease;
-  }
-  &:hover {
-    .nav-link {
-      color: $aqua;
-      background-color: $darkblue;
+  padding: rem(20px); 
+  .name {
+    padding-bottom: rem(20px); 
+    border-bottom: 1px solid $divider;
+    .name-link {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      margin: 0;
+      padding: 0;
+      font-family: $display-font-stack;
+      font-style: normal;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.4;
+      color: $browndark;
+      transition: color 0.2s ease;
+      span {
+        transition: background 0.2s ease;
+      }
+      &:hover {
+        color: $browndark;
+      }
     }
   }
   @include media(medium) {
@@ -72,7 +53,7 @@
 }
 
 .nav-ul {
-  padding-top: 1.5rem;
+  padding-top: rem(30px);
   list-style: none;
   @include media(medium) {
     display: none;
@@ -82,21 +63,21 @@
   }
 }
 
+.nav-item {
+  &:nth-of-type(2) {
+    margin-bottom: rem(20px);
+  }
+}
+
 .nav-link {
   display: inline-block;
-  margin-bottom: 4px;
+  margin-bottom: rem(4px);
   vertical-align: middle;
   font-size: 1rem;
   font-weight: 400;
-  color: $darkblue;
+  color: $browndark;
   outline: 0;
   transition: background-color 0.2s ease;
-  &.current {
-    background-color: $darkaqua;
-  }
-  &:hover {
-    background-color: $aqua;
-  }
 }
 
 .work-temp-fade,
@@ -126,99 +107,88 @@
     width: 50%;
     min-width: 100px;
     height: 60px;
-    padding-left: 1rem;
+    padding-left: rem(20px);
     cursor: pointer;
-    transition: all 0.125s ease;
-    background: $darkblue;
+    transition: background 0.125s ease;
+    background: $browndark;
     &:hover {
-      background: $aqua;
-      p.open-mobile-menu,
-      p.close-mobile-menu {
-        color: $darkblue;
+      background: darken($browndark,5%);
+      .menu-tab-state.open-mobile-menu,
+      .menu-tab-state.close-mobile-menu {
+        color: $green;
       }
-      p.open-mobile-menu .berger .berger-bar,
-      p.close-mobile-menu .close-icon .close-bar {
-        background: $darkblue;
+      .menu-tab-state.open-mobile-menu .berger .berger-bar,
+      .menu-tab-state.close-mobile-menu .close-bar {
+        background: $green;
       }
     }
-    p {
+    .menu-tab-state {
       margin: 0;
       padding: 0;
-      font-size: 20px;
+      font-size: 1.25rem;
       &.open-mobile-menu {
         display: block;
-        color: $lightblue;
+        color: $graylight;
+        transition: color 0.125s ease;
         .hi {
-          margin-top: 2rem;
-          margin-bottom: 2rem;
-          margin-right: 6px;
-          line-height: 10px;
+          margin-top: rem(40px);
+          margin-bottom: rem(40px);
+          margin-right: rem(10px);
+          line-height: rem(10px);
         }
         .berger {
           display: inline-flex;
           flex-direction: column;
           justify-content: space-between;
           width: 30px;
-          height: 21px;
+          height: 18px;
           margin-top: -4px;
           vertical-align: middle;
           .berger-bar {
             display: block;
             width: 100%;
-            height: 3px;
+            height: 1px;
             border-radius: 1px;
-            background: $lightblue;
+            background: $graylight;
           }
         }
       }
       &.close-mobile-menu {
         display: none;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        color: $lightblue;
-        .close-icon {
-          position: relative;
-          display: inline-block;
-          width: 26px;
-          height: 20px;
-          margin-top: -4px;
-          vertical-align: middle;
-          .close-bar {
-            position: absolute;
-            top: 8px;
-            display: block;
-            width: 20px;
-            height: 3px;
-            border-radius: 1px;
-            background: $lightblue;
-            &:first-of-type {
-              transform: rotate(45deg);
-            }
-            &:nth-of-type(2) {
-              transform: rotate(135deg);
-            }
+        transition: color 0.125s ease;
+        .close-bar {
+          display: block;
+          width: 30px;
+          height: 1px;
+          background: $graylight;
+          transform: rotate(45deg);
+          &:first-child {
+            transform: rotate(135deg);
           }
         }
       }
     }
   }
   .mobile-menu {
-    transition: all 0.125s ease;
-    color: $white;
-    background: $darkblue;
-    ul {
+    color: $graylight;
+    .mobile-nav-list {
       margin: 0;
-      padding: 1rem;
+      padding: 0;
       list-style-type: none;
       li {
-        margin: 1rem 0;
+        margin: 0;
+        border-bottom: 1px solid darken($browndark,5%);
         a {
-          color: $white;
+          width: 100%;
+          height: 100%;
+          margin: 0;
+          padding: rem(30px) rem(20px);
+          color: $graylight;
           font-weight: 400;
           text-decoration: none;
           &:hover {
-            color: $aqua;
-            background: none !important;
+            color: $green;
+            background: darken($browndark,5%);
           }
         }
       }
@@ -229,7 +199,8 @@
     transform: translateY(0);
     .menu-tab {
       justify-content: flex-start;
-      padding-left: 1rem;
+      padding-left: rem(20px);
+      border-bottom: 1px solid darken($browndark,5%);
       .open-mobile-menu {
         display: none;
       }
@@ -237,53 +208,76 @@
         display: block;
       }
     }
+    .mobile-menu {
+      background: $browndark;
+    }
   }
 }
 
-.icons1,
-.icons2 {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  line-height: 0;
-  span {
-    margin-right: 2rem;
-    &.glitch-icon {
-      width: 18px;
-      height: 16px;
-      margin-right: 0;
-      display: inline-block;
-      .glitch-svg {
-        width: 18px;
-        height: 18px;
-        .glitch-path{
-          fill-rule: evenodd;
-          clip-rule: evenodd;
-          fill: $white;
+.mobile-nav-link {
+  display: inline-block;
+  margin-bottom: 4px;
+  vertical-align: middle;
+  font-size: 1rem;
+  font-weight: 400;
+  color: $browndark;
+  outline: 0;
+  transition: background-color 0.2s ease;
+}
+
+.mobile-social-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr 1fr;
+  li {
+    aspect-ratio: 1;
+    border-right: 1px solid darken($browndark,5%);
+    border-bottom: 1px solid darken($browndark,5%);
+    &:nth-of-type(4) {
+      border-right: none;
+    }
+    &:nth-of-type(8) {
+      border-right: none;
+    }
+    &:nth-of-type(5),
+    &:nth-of-type(6),
+    &:nth-of-type(7),
+    &:nth-of-type(8) {
+      border-bottom: none;
+    }
+    .mobile-nav-link {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      font-size: 28px;
+      color: $graylight;
+      &:hover {
+        color: $green;
+        background: darken($browndark,5%);
+        .glitch-icon .glitch-svg .glitch-path {
+          fill: $green;
         }
       }
-      &:hover {
+    }
+    .glitch-icon {
+      width: 40px;
+      height: 28px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .glitch-svg {
+        width: 40px;
+        height: 28px;
         .glitch-path {
-          fill: $aqua;
+          fill-rule: evenodd;
+          clip-rule: evenodd;
+          transition: fill 0.125s ease;
+          fill: $graylight;
         }
       }
     }
   }
-  @include media(small) {
-    justify-content: space-between;
-  }
-}
-.icons1 {
-  margin: 2rem 0;
-}
-.icons2 {
-  margin-bottom: 1rem;
-  @include media(small) {
-    justify-content: space-around;
-  }
-}
-
-.nav-coming-soon {
-  font-size: 70%;
-  font-style: italic;
 }
