--- a/_scss/variables.scss
+++ b/_scss/variables.scss
@@ -1,36 +1,31 @@
 // global variables
 
-$font-stack: 'Source Sans Pro', Monaco, "Courier New", monospace; // 300, 400, 600 (and italic versions of each)
-$serif-font-stack: 'Literata', Monaco, "Courier New", monospace; // 300, 600, 900 (and italic versions of each)
+$display-font-stack: 'Space Mono', Monaco, "Courier New", monospace; // 300, 600, 900 (and italic versions of each)
+$base-font-stack: 'Source Sans Pro', Monaco, "Courier New", monospace; // 300, 400, 600 (and italic versions of each)
 
 // palette
 
-$aqua: #87ffe3;
-$lightaqua: lighten($aqua, 20%); // #edfffb
-$lesslightaqua: lighten($aqua, 10%); // #baffef
-$darkaqua: darken($aqua, 20%); // #21ffcb
-$verydarkaqua: darken($aqua, 40%); // #00ba8f
+$browndark: #282A25;
+$brown: #7A7812;
+$brownlight: #98977E;
 
-$blue: #8f80ff;
-$lightblue: lighten($blue, 20%); // #e9e6ff
-$lesslightblue: lighten($blue, 15%); // #d2cdff
-$darkblue: darken($blue, 50%); // #0f0080
-$verydarkblue: darken($blue, 65%); // #060034
+$greendark: #34745B;
+$green: #6CF1AD;
+$greenlight: #D2FBE3;
 
-$darkbluegray: #86858f;
-$bluegray: #b9b7c7;
-$lightbluegray: #f1f0fa;
-$white: #fafafa;
+$bluedark: #111C4F;
+$blue: #0D0B9F;
+$bluelight: #8F80FF;
 
-$lightred: #FFA497;
-$lightorange: #FFC798;
-$lightpeach: #FFECC8;
-$lightyellow: #FFF98B;
-$lightgreen: #CBFFC3;
-$lightblue: #C4F3FF;
-$lightnavy: #E2DEFF;
-$lightpurple: #E3D8FE;
+$orangedark: #F83704;
+$orange: #FF8F72;
+$orangelight: #FCE0C4;
 
+$graydark: #CFC9BD;
+$gray: #F3F3EE;
+$graylight: #FAFAFA;
+
+$divider: darken($graylight,10%);
 
 // mixins
 
@@ -44,10 +39,10 @@ $html-font-size: 16px;
 
 @mixin box-shadow-with-animation {
   width: calc(100% - 14px);
-  border: 2px solid $blue;
-  box-shadow: 14px 14px 0 0 $blue;
-  -webkit-box-shadow: 14px 14px 0 0 $blue;
-  -moz-box-shadow: 14px 14px 0 0 $blue;
+  border: 2px solid $greendark;
+  box-shadow: 14px 14px 0 0 $greenlight;
+  -webkit-box-shadow: 14px 14px 0 0 $greenlight;
+  -moz-box-shadow: 14px 14px 0 0 $greenlight;
   animation: BoxShadowSlide 0.5s forwards;
   -webkit-animation: BoxShadowSlide 0.5s forwards;
   -moz-animation: BoxShadowSlide 0.5s forwards;
@@ -56,81 +51,80 @@ $html-font-size: 16px;
 
 @keyframes BoxShadowSlide {
   0% {
-    box-shadow: 0 0 0 0 $blue;
-    -webkit-box-shadow: 0 0 0 0 $blue;
-    -moz-box-shadow: 0 0 0 0 $blue;
+    box-shadow: 0 0 0 0 $greenlight;
+    -webkit-box-shadow: 0 0 0 0 $greenlight;
+    -moz-box-shadow: 0 0 0 0 $greenlight;
   }
   100% {
-    box-shadow: 14px 14px 0 0 $blue;
-    -webkit-box-shadow: 14px 14px 0 0 $blue;
-    -moz-box-shadow: 14px 14px 0 0 $blue;
+    box-shadow: 14px 14px 0 0 $greenlight;
+    -webkit-box-shadow: 14px 14px 0 0 $greenlight;
+    -moz-box-shadow: 14px 14px 0 0 $greenlight;
   }
 }
 @-webkit-keyframes BoxShadowSlide {
   0% {
-    box-shadow: 0 0 0 0 $blue;
-    -webkit-box-shadow: 0 0 0 0 $blue;
-    -moz-box-shadow: 0 0 0 0 $blue;
+    box-shadow: 0 0 0 0 $greenlight;
+    -webkit-box-shadow: 0 0 0 0 $greenlight;
+    -moz-box-shadow: 0 0 0 0 $greenlight;
   }
   100% {
-    box-shadow: 14px 14px 0 0 $blue;
-    -webkit-box-shadow: 14px 14px 0 0 $blue;
-    -moz-box-shadow: 14px 14px 0 0 $blue;
+    box-shadow: 14px 14px 0 0 $greenlight;
+    -webkit-box-shadow: 14px 14px 0 0 $greenlight;
+    -moz-box-shadow: 14px 14px 0 0 $greenlight;
   }
 }
 @-moz-keyframes BoxShadowSlide {
   0% {
-    box-shadow: 0 0 0 0 $blue;
-    -webkit-box-shadow: 0 0 0 0 $blue;
-    -moz-box-shadow: 0 0 0 0 $blue;
+    box-shadow: 0 0 0 0 $greenlight;
+    -webkit-box-shadow: 0 0 0 0 $greenlight;
+    -moz-box-shadow: 0 0 0 0 $greenlight;
   }
   100% {
-    box-shadow: 14px 14px 0 0 $blue;
-    -webkit-box-shadow: 14px 14px 0 0 $blue;
-    -moz-box-shadow: 14px 14px 0 0 $blue;
+    box-shadow: 14px 14px 0 0 $greenlight;
+    -webkit-box-shadow: 14px 14px 0 0 $greenlight;
+    -moz-box-shadow: 14px 14px 0 0 $greenlight;
   }
 }
 @-o-keyframes BoxShadowSlide {
   0% {
-    box-shadow: 0 0 0 0 $blue;
-    -webkit-box-shadow: 0 0 0 0 $blue;
-    -moz-box-shadow: 0 0 0 0 $blue;
+    box-shadow: 0 0 0 0 $greenlight;
+    -webkit-box-shadow: 0 0 0 0 $greenlight;
+    -moz-box-shadow: 0 0 0 0 $greenlight;
   }
   100% {
-    box-shadow: 14px 14px 0 0 $blue;
-    -webkit-box-shadow: 14px 14px 0 0 $blue;
-    -moz-box-shadow: 14px 14px 0 0 $blue;
+    box-shadow: 14px 14px 0 0 $greenlight;
+    -webkit-box-shadow: 14px 14px 0 0 $greenlight;
+    -moz-box-shadow: 14px 14px 0 0 $greenlight;
   }
 }
 
-@mixin link-with-animation {
-  position: relative;
-  z-index: 1;
-  display: inline-block;
-  padding-bottom: 4px;
-  font-weight: 300;
-  letter-spacing: 0;
-  color: $darkblue;
-  text-decoration: none;
-  &:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: $aqua;
-    transition: all 0.2s ease-in-out 0s;
-    z-index: -10;
-  }
-  &:hover {
-    text-decoration: none;
-    background: none;
-    &:before {
-      width: 100%;
-      height: 36px;
-    }
-  }
+@mixin simple-fade-in {
+  -webkit-animation: fadein 2s;
+  -moz-animation: fadein 2s;
+  -ms-animation: fadein 2s;
+  -o-animation: fadein 2s;
+  animation: fadein 2s;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
 
 // media queries
