work page content updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,4 @@
   <p class="footer-text">Thanks for visiting. Have a nice <span class="date"></span></p>
 </footer>
 
-{% if page.bannerOffset %}
-  <div class="footer-base" style="background-position: center {{ page.bannerOffset }}"></div>
-{% else %}
-  <div class="footer-base" style="background-position: center 0"></div>
-{% endif %}
+<div class="desktop-color-bar"></div>
