--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,8 @@
     <nav class="desktop-menu">
       <ul id="menu" class="nav-ul">
         <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="/">Work</a></li>
+        <li class="nav-item"><a class="nav-link" href="/work">Work</a></li>
+        <li class="nav-item"><a class="nav-link" href="/side-projects">Side</a></li>
         <li class="nav-item"><a class="nav-link" href="https://github.com/ChrisBup" target="_blank" rel="noopener">GitHub</a></li>
         <li class="nav-item"><a class="nav-link" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener">CodePen</a></li>
         <li class="nav-item"><a class="nav-link" href="https://glitch.com/@ChrisBup" target="_blank" rel="noopener">Glitch</a></li>
@@ -30,7 +31,8 @@
   <nav class="mobile-menu">
     <ul class="mobile-nav-list">
       <li><a class="mobile-nav-link" href="/about">About</a></li>
-      <li><a class="mobile-nav-link" href="/">Work</a></li>
+      <li><a class="mobile-nav-link" href="/work">Work</a></li>
+      <li><a class="mobile-nav-link" href="/side-projects">Side</a></li>
     </ul>
     <ul class="mobile-social-grid">
       <li><a class="mobile-nav-link" href="https://github.com/ChrisBup" target="_blank" rel="noopener"><i class="fab fa-github"></i></a></li>
