--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
       }
     </script>
 
-    {% include color-bar.html %}
+    <div class="mobile-color-bar"></div>
 
     <main class="page-container">
       {% include nav.html %}
@@ -36,6 +36,9 @@
     {% include footer.html %}
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="//s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?r=5426"></script>
+    <script src="//s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
+
     <script>
       window.jQuery || document.write('<script src="/assets/js/vendor/jquery-3.5.1.min.js"><\/script>');
     </script>
