--- a/_scss/footer.scss
+++ b/_scss/footer.scss
@@ -14,15 +14,12 @@ footer {
   }
 }
 
-.footer-base {
+.desktop-color-bar {
   position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
   height: 10px;
-  background-image: url(/assets/img/misc/color-banner.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
   @include media(medium) {
     display: none;
   }
