--- a/_scss/global.scss
+++ b/_scss/global.scss
@@ -62,13 +62,10 @@
 
 // color bar
 
-.color-bar {
+.mobile-color-bar {
   display: none;
   width: 100%;
   height: 10px;
-  background-image: url(/assets/img/misc/color-banner.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
   @include media(medium) {
     display: block;
   }
@@ -132,6 +129,11 @@
       display: block;
       width: 100%;
       height: auto;
+      &.list-1c__img-border {
+        border-top: 1px solid $gray;
+        border-bottom: 1px solid $gray;
+        border-left: 1px solid $gray;
+      }
       @include mediaMin(600) {
         width: 50%;
       }
@@ -167,22 +169,20 @@
     }
   }
   .list-mc__item {
+    opacity: 0;
+    will-change: transform;
     background: $gray;
     .list-mc__img {
       display: block;
       width: 100%;
       height: auto;
       &.list-mc__img-border {
-        &.loaded {
-          border-top: 1px solid $gray;
-          border-left: 1px solid $gray;
-          border-right: 1px solid $gray;
-        }
+        border-top: 1px solid $gray;
+        border-left: 1px solid $gray;
+        border-right: 1px solid $gray;
       }
       &.list-mc__img-full-border {
-        &.loaded {
-          border: 1px solid $gray;
-        }
+        border: 1px solid $gray;
       }
     }
     .list-mc__text {
