--- a/_scss/home.scss
+++ b/_scss/home.scss
@@ -9,6 +9,16 @@
     font-style: normal;
     font-weight: 400;
     line-height: 1.6;
+    word-wrap: break-word;
+    @include media(large) {
+      font-size: 2.25rem;
+    }
+    @include media(medium) {
+      font-size: 2rem;
+    }
+    @include media(small) {
+      font-size: 1.5rem;
+    }
     @include simple-fade-in;
     .home-intro-link {
       color: $greendark;
