--- a/_scss/nav.scss
+++ b/_scss/nav.scss
@@ -63,7 +63,7 @@
 }
 
 .nav-item {
-  &:nth-of-type(2) {
+  &:nth-of-type(3) {
     margin-bottom: rem(20px);
   }
 }
@@ -110,15 +110,17 @@
     cursor: pointer;
     transition: background 0.125s ease;
     background: $browndark;
-    &:hover {
-      background: darken($browndark,5%);
-      .menu-tab-state.open-mobile-menu,
-      .menu-tab-state.close-mobile-menu {
-        color: $green;
-      }
-      .menu-tab-state.open-mobile-menu .berger .berger-bar,
-      .menu-tab-state.close-mobile-menu .close-bar {
-        background: $green;
+    @media not all and (hover: none) {
+      &:hover {
+        background: darken($browndark,5%);
+        .menu-tab-state.open-mobile-menu,
+        .menu-tab-state.close-mobile-menu {
+          color: $green;
+        }
+        .menu-tab-state.open-mobile-menu .berger .berger-bar,
+        .menu-tab-state.close-mobile-menu .close-bar {
+          background: $green;
+        }
       }
     }
     .menu-tab-state {
@@ -229,7 +231,7 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr 1fr;
   li {
-    aspect-ratio: 1;
+    // aspect-ratio: 1;
     border-right: 1px solid darken($browndark,5%);
     border-bottom: 1px solid darken($browndark,5%);
     &:nth-of-type(4) {
@@ -251,7 +253,8 @@
       width: 100%;
       height: 100%;
       margin: 0;
-      font-size: 28px;
+      padding: rem(30px) 0;
+      font-size: 24px;
       color: $graylight;
       &:hover {
         color: $green;
@@ -262,14 +265,14 @@
       }
     }
     .glitch-icon {
-      width: 40px;
-      height: 28px;
+      width: 34px;
+      height: 24px;
       display: flex;
       align-items: center;
       justify-content: center;
       .glitch-svg {
-        width: 40px;
-        height: 28px;
+        width: 34px;
+        height: 24px;
         .glitch-path {
           fill-rule: evenodd;
           clip-rule: evenodd;
