update about text, remove bannerOffsets

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
       window.jQuery || document.write('<script src="/assets/js/vendor/jquery-3.5.1.min.js"><\/script>');
     </script>
     {% if page.url == "/favorite-things" %}
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.1.0/list.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.1.0/list.min.js"></script>
       <script src="assets/js/main.js"></script>
       <script src="assets/js/favorite-things.js"></script>
     {% else %}
