--- a/_scss/base.scss
+++ b/_scss/base.scss
@@ -153,7 +153,7 @@ blockquote {
 }
 
 .basic-list {
-  margin: rem(10px);
+  margin: rem(10px) rem(10px) rem(10px) rem(20px);
   list-style: none;
   li {
     margin-bottom: rem(15px);
@@ -161,16 +161,19 @@ blockquote {
       content: "\2022";
       display: inline-block;
       width: rem(10px);
-      margin-left: rem(-10px);
+      margin-left: rem(-20px);
       margin-right: rem(10px);
       color: $green;
     }
   }
   &.basic-list__ol {
+    margin-left: rem(28px);
     counter-reset: item;
     li {
       &::before {
         content: counter(item) ". ";
+        margin-left: rem(-28px);
+        margin-right: rem(16px);
         counter-increment: item;
         color: $graydark;
       }
