--- a/_scss/variables.scss
+++ b/_scss/variables.scss
@@ -39,7 +39,7 @@ $html-font-size: 16px;
 
 @mixin box-shadow-with-animation {
   width: calc(100% - 14px);
-  border: 2px solid $greendark;
+  border: 1px solid $divider;
   box-shadow: 14px 14px 0 0 $greenlight;
   -webkit-box-shadow: 14px 14px 0 0 $greenlight;
   -moz-box-shadow: 14px 14px 0 0 $greenlight;
