--- a/_scss/variables.scss
+++ b/_scss/variables.scss
@@ -26,6 +26,11 @@ $gray: #F3F3EE;
 $graylight: #FAFAFA;
 
 $divider: darken($graylight,10%);
+$box-shadow-bg: $greenlight;
+
+:root {
+  --box-shadow-time: 1s;
+}
 
 // mixins
 
@@ -38,63 +43,50 @@ $html-font-size: 16px;
 }
 
 @mixin box-shadow-with-animation {
-  width: calc(100% - 14px);
   border: 1px solid $divider;
-  box-shadow: 14px 14px 0 0 $greenlight;
-  -webkit-box-shadow: 14px 14px 0 0 $greenlight;
-  -moz-box-shadow: 14px 14px 0 0 $greenlight;
-  animation: BoxShadowSlide 0.5s forwards;
-  -webkit-animation: BoxShadowSlide 0.5s forwards;
-  -moz-animation: BoxShadowSlide 0.5s forwards;
-  -o-animation: BoxShadowSlide 0.5s forwards;
+  box-shadow: 0 0 0 0 $box-shadow-bg;
+  -webkit-box-shadow: 0 0 0 0 $box-shadow-bg;
+  -moz-box-shadow: 0 0 0 0 $box-shadow-bg;
+  animation: var(--box-shadow-time) BoxShadowSlide var(--box-shadow-time) forwards;
+  -webkit-animation: var(--box-shadow-time) BoxShadowSlide var(--box-shadow-time) forwards;
+  -moz-animation: var(--box-shadow-time) BoxShadowSlide var(--box-shadow-time) forwards;
+  -o-animation: var(--box-shadow-time) BoxShadowSlide var(--box-shadow-time) forwards;
 }
 
 @keyframes BoxShadowSlide {
   0% {
-    box-shadow: 0 0 0 0 $greenlight;
-    -webkit-box-shadow: 0 0 0 0 $greenlight;
-    -moz-box-shadow: 0 0 0 0 $greenlight;
+    box-shadow: 0 0 0 0 $box-shadow-bg;
   }
   100% {
-    box-shadow: 14px 14px 0 0 $greenlight;
-    -webkit-box-shadow: 14px 14px 0 0 $greenlight;
-    -moz-box-shadow: 14px 14px 0 0 $greenlight;
+    box-shadow: -10px 10px 0 0 $box-shadow-bg;
   }
 }
 @-webkit-keyframes BoxShadowSlide {
   0% {
-    box-shadow: 0 0 0 0 $greenlight;
-    -webkit-box-shadow: 0 0 0 0 $greenlight;
-    -moz-box-shadow: 0 0 0 0 $greenlight;
+    -webkit-box-shadow: 0 0 0 0 $box-shadow-bg;
   }
   100% {
-    box-shadow: 14px 14px 0 0 $greenlight;
-    -webkit-box-shadow: 14px 14px 0 0 $greenlight;
-    -moz-box-shadow: 14px 14px 0 0 $greenlight;
+    -webkit-box-shadow: -10px 10px 0 0 $box-shadow-bg;
   }
 }
 @-moz-keyframes BoxShadowSlide {
   0% {
-    box-shadow: 0 0 0 0 $greenlight;
-    -webkit-box-shadow: 0 0 0 0 $greenlight;
-    -moz-box-shadow: 0 0 0 0 $greenlight;
+    -moz-box-shadow: 0 0 0 0 $box-shadow-bg;
   }
   100% {
-    box-shadow: 14px 14px 0 0 $greenlight;
-    -webkit-box-shadow: 14px 14px 0 0 $greenlight;
-    -moz-box-shadow: 14px 14px 0 0 $greenlight;
+    -moz-box-shadow: -10px 10px 0 0 $box-shadow-bg;
   }
 }
 @-o-keyframes BoxShadowSlide {
   0% {
-    box-shadow: 0 0 0 0 $greenlight;
-    -webkit-box-shadow: 0 0 0 0 $greenlight;
-    -moz-box-shadow: 0 0 0 0 $greenlight;
+    box-shadow: 0 0 0 0 $box-shadow-bg;
+    -webkit-box-shadow: 0 0 0 0 $box-shadow-bg;
+    -moz-box-shadow: 0 0 0 0 $box-shadow-bg;
   }
   100% {
-    box-shadow: 14px 14px 0 0 $greenlight;
-    -webkit-box-shadow: 14px 14px 0 0 $greenlight;
-    -moz-box-shadow: 14px 14px 0 0 $greenlight;
+    box-shadow: -10px 10px 0 0 $box-shadow-bg;
+    -webkit-box-shadow: -10px 10px 0 0 $box-shadow-bg;
+    -moz-box-shadow: -10px 10px 0 0 $box-shadow-bg;
   }
 }
 
